# symmetrical-octo-chainsaw

./: Cargo.toml  README.md
automation-2040w/: Cargo.toml
automation-2040w-bsp/: Cargo.toml  README.md
automation-2040w-bsp/src/: lib.rs
firmware/: Cargo.toml
firmware/src/: main.rs
firmware/src/automation_2040w/: mod.rs
firmware/src/mcp23017/: mod.rs
firmware/src/net/: mod.rs
firmware/src/rats_nest/: mod.rs
logic/: Cargo.toml  README.md
logic/src/: lib.rs
logic/tests/: integration_tests.rs
main/: Cargo.toml  README.md
main/.cargo/: config.toml
main/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/http/: mod.rs  ws.rs
shared/src/http/public/: index.html
shared/src/pac_man_ball/: mod.rs
src/: main.rs
src/automation_2040w/: mod.rs
src/hardware_abstraction/: mod.rs
src/http/: mod.rs  ws.rs
src/mcp23017/: mod.rs
src/net/: mod.rs
src/pac_man_ball/: mod.rs
src/rats_nest/: mod.rs
std/: Cargo.toml
