[workspace]
resolver = "2"
members = [
    "firmware",
    "std",
    "shared",
]

[workspace.dependencies]
critical-section = "1.1"
defmt = { version = "1.0.1"}
edge-http = { version = "0.6.1" }
edge-nal = { version = "0.5.0" }
edge-ws = { version = "0.5.0" }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
embedded-io-async = { version = "0.6.1"}
heapless = "0.8"
log = "0.4"
serde = { version = "1.0.223", default-features = false }
serde-json-core = "0.6.0"
static_cell = "2.1"
