[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { workspace = true }
embassy-futures = "0.1"

[dev-dependencies]
embassy-executor = { workspace = true, features = ["arch-std", "executor-thread"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
std = []