[package]
name = "symmetrical-octo-chainsaw-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "1.0.1", optional = true}
log = { version = "0.4", optional = true }

serde = { version = "1.0.223", default-features = false }
serde-json-core = { version = "0.6.0" }

edge-http = { version = "0.6.1" }
edge-nal = { version = "0.5.0" }
edge-ws = { version = "0.5.0" }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
embedded-io-async = { version = "0.6.1" }

[features]
default = []
log = ["dep:log", "edge-http/log"]
defmt = ["dep:defmt", "edge-http/defmt", "edge-ws/defmt"]
