[package]
name = "std"
version = "0.1.0"
edition = "2021"

[dependencies]
# direct dependencies
anyhow = "1.0.99"
edge-nal = { version = "0.5.0" }
edge-nal-std = "0.5.0"
embedded-io-async = { version = "0.6.1" }
futures-lite = "2.6.1"
symmetrical-octo-chainsaw-shared = { path = "../shared", features = ["log"] }

# configure std support in transitive dependencies
critical-section = { version = "1.1", features = ["std"] }
embassy-sync = { version = "0.7.2", features = ["std"] }
embassy-time = { version = "0.5.0", features = ["std", "log", "generic-queue-8"] }

